--- a/README
+++ b/README
@@ -1,1 +1,3 @@
-This is a forum application for CollegeZen. It uses Forem engine for Rails 3.1.
+This is CollegeZen Application. It uses Forem engine for Rails 3.1.
+Need to do type rake db:migrate, rake db:test:prepare, and rake assets:precompile to create the user database and precompile assets
+
